feat: add more files to delete automatically when compiling latex file

--- a/settings.json
+++ b/settings.json
@@ -9,16 +9,27 @@
     "latex-workshop.latex.build.forceRecipeUsage": true,
     "latex-workshop.latex.clean.fileTypes": [
         "*.aux",
+        "*.bcf",
         "*.bbl",
         "*.blg",
-        "*.log",
-        "*.out",
-        "*.toc",
+        "*.idx",
+        "*.ind",
         "*.lof",
         "*.lot",
+        "*.out",
+        "*.toc",
+        "*.acn",
+        "*.acr",
+        "*.alg",
+        "*.glg",
+        "*.glo",
+        "*.gls",
         "*.fls",
+        "*.log",
         "*.fdb_latexmk",
-        "*.synctex.gz"
+        "*.run.xml",
+        "*.synctex.gz",
+        "*.xmpi"
     ],
     "latex-workshop.latex.clean.method": "glob",
     "latex-workshop.latex.autoClean.run": "onSucceeded"
